--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5",
     "winston": "^3.17.0"
